native/src/tarantool_factory.h

typedef struct mempool tarantool_factory_mempool;
 
typedef struct small_alloc tarantool_factory_small_alloc;
 
typedef struct interactor_memory tarantool_factory_interactor_memory;
    struct tarantool_factory
    {
        tarantool_factory_small_alloc* tarantool_datas;
        tarantool_factory_mempool* tarantool_messages;
        tarantool_factory_mempool* tarantool_call_requests;
        tarantool_factory_mempool* tarantool_evaluate_requests;
        tarantool_factory_mempool* tarantool_space_requests;
        tarantool_factory_mempool* tarantool_space_count_requests;
        tarantool_factory_mempool* tarantool_space_select_requests;
        tarantool_factory_mempool* tarantool_space_update_requests;
        tarantool_factory_mempool* tarantool_space_upsert_requests;
        tarantool_factory_mempool* tarantool_space_iterator_requests;
        tarantool_factory_mempool* tarantool_index_requests;
        tarantool_factory_mempool* tarantool_index_count_requests;
        tarantool_factory_mempool* tarantool_index_id_requests;
        tarantool_factory_mempool* tarantool_index_update_requests;
        tarantool_factory_mempool* tarantool_index_iterator_requests;
        tarantool_factory_mempool* tarantool_index_select_requests;
        tarantool_factory_mempool* tarantool_index_index_ids;
    };
    int tarantool_factory_initialize(struct tarantool_factory* factory, tarantool_factory_interactor_memory* memory);
    struct interactor_message* tarantool_space_request_prepare(struct tarantool_factory* factory, uint32_t space_id, const char* tuple, size_t tuple_size);
    void tarantool_space_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_space_count_request_prepare(struct tarantool_factory* factory, uint32_t space_id, int iterator_type, const char* key, size_t key_size);
    void tarantool_space_count_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_space_select_request_prepare(struct tarantool_factory* factory, uint32_t space_id, const char* key, size_t key_size, uint32_t offset, uint32_t limit, int iterator_type);
    void tarantool_space_select_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_space_update_request_prepare(struct tarantool_factory* factory, uint32_t space_id, const char* key, size_t key_size, const char* operations, size_t operations_size);
    void tarantool_space_update_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_space_upsert_request_prepare(struct tarantool_factory* factory, uint32_t space_id, const char* tuple, size_t tuple_size, const char* operations, size_t operations_size);
    void tarantool_space_upsert_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_space_iterator_request_prepare(struct tarantool_factory* factory, uint32_t space_id, int type, const char* key, size_t key_size);
    void tarantool_space_iterator_request_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_index_request_prepare(struct tarantool_factory* factory, uint32_t space_id, uint32_t index_id, const char* tuple, size_t tuple_size);
    void tarantool_index_request_free(struct tarantool_factory* factory, struct interactor_message* message);