dart/lib/storage/bindings.dart


@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_tuple',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_tuple(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<tarantool_configuration>, ffi.Pointer<tarantool_box>)>(
    symbol: 'tarantool_initialize', assetId: 'tarantool-bindings', isLeaf: true)
external bool tarantool_initialize(
  ffi.Pointer<tarantool_configuration> configuration,
  ffi.Pointer<tarantool_box> box,
);

@ffi.Native<ffi.Bool Function()>(
    symbol: 'tarantool_initialized',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external bool tarantool_initialized();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>(
    symbol: 'tarantool_status', assetId: 'tarantool-bindings', isLeaf: true)
external ffi.Pointer<ffi.Char> tarantool_status();

@ffi.Native<ffi.Int Function()>(
    symbol: 'tarantool_is_read_only',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external int tarantool_is_read_only();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>(
    symbol: 'tarantool_initialization_error',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<ffi.Char> tarantool_initialization_error();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>(
    symbol: 'tarantool_shutdown_error',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<ffi.Char> tarantool_shutdown_error();

@ffi.Native<ffi.Bool Function()>(
    symbol: 'tarantool_shutdown', assetId: 'tarantool-bindings', isLeaf: true)
external bool tarantool_shutdown();

@ffi.Native<ffi.Int Function(ffi.Pointer<tarantool_executor_configuration>)>(
    symbol: 'tarantool_executor_initialize',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external int tarantool_executor_initialize(
  ffi.Pointer<tarantool_executor_configuration> configuration,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<tarantool_executor_configuration>)>(
    symbol: 'tarantool_executor_start',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_executor_start(
  ffi.Pointer<tarantool_executor_configuration> configuration,
);

@ffi.Native<ffi.Void Function()>(
    symbol: 'tarantool_executor_stop',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_executor_stop();

@ffi.Native<ffi.Void Function()>(
    symbol: 'tarantool_executor_destroy',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_executor_destroy();

@ffi.Native<ffi.Int Function()>(
    symbol: 'tarantool_executor_descriptor',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external int tarantool_executor_descriptor();

@ffi.Native<
        ffi.Pointer<tarantool_tuple_port_entry_t> Function(
            ffi.Pointer<tarantool_tuple_port_t>)>(
    symbol: 'tarantool_port_first', assetId: 'tarantool-bindings', isLeaf: true)
external ffi.Pointer<tarantool_tuple_port_entry_t> tarantool_port_first(
  ffi.Pointer<tarantool_tuple_port_t> port,
);

@ffi.Native<
        ffi.Pointer<tarantool_tuple_port_entry_t> Function(
            ffi.Pointer<tarantool_tuple_port_entry_t>)>(
    symbol: 'tarantool_port_entry_next',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<tarantool_tuple_port_entry_t> tarantool_port_entry_next(
  ffi.Pointer<tarantool_tuple_port_entry_t> current,
);

@ffi.Native<
        ffi.Pointer<tarantool_tuple_t> Function(
            ffi.Pointer<tarantool_tuple_port_entry_t>)>(
    symbol: 'tarantool_port_entry_tuple',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<tarantool_tuple_t> tarantool_port_entry_tuple(
  ffi.Pointer<tarantool_tuple_port_entry_t> current,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<tarantool_tuple_t>)>(
    symbol: 'tarantool_tuple_size', assetId: 'tarantool-bindings', isLeaf: true)
external int tarantool_tuple_size(
  ffi.Pointer<tarantool_tuple_t> tuple,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<tarantool_tuple_t>)>(
    symbol: 'tarantool_tuple_data', assetId: 'tarantool-bindings', isLeaf: true)
external ffi.Pointer<ffi.Void> tarantool_tuple_data(
  ffi.Pointer<tarantool_tuple_t> tuple,
);

@ffi.Native<
        ffi.Int Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<tarantool_factory_interactor_memory>)>(
    symbol: 'tarantool_factory_initialize',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external int tarantool_factory_initialize(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<tarantool_factory_interactor_memory> memory,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_space_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  ffi.Pointer<ffi.Char> tuple,
  int tuple_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_space_count_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_count_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int iterator_type,
  ffi.Pointer<ffi.Char> key,
  int key_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_count_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_count_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Int)>(
    symbol: 'tarantool_space_select_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_select_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  ffi.Pointer<ffi.Char> key,
  int key_size,
  int offset,
  int limit,
  int iterator_type,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_select_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_select_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_space_update_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_update_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  ffi.Pointer<ffi.Char> key,
  int key_size,
  ffi.Pointer<ffi.Char> operations,
  int operations_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_update_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_update_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_space_upsert_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_upsert_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  ffi.Pointer<ffi.Char> tuple,
  int tuple_size,
  ffi.Pointer<ffi.Char> operations,
  int operations_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_upsert_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_upsert_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_space_iterator_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_iterator_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int type,
  ffi.Pointer<ffi.Char> key,
  int key_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_iterator_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_iterator_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_index_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
  ffi.Pointer<ffi.Char> tuple,
  int tuple_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);
